--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -50,6 +51,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass": "^1.59.2",
-    "vite": "4.4.2"
+    "vite": "^4.5.12"
   }
 }
