--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "body-parser": "^1.18.3",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "pg": "^8.5.0",
     "socket.io": "^4.8.1",
     "ws": "^7.0.0"
