--- a/backend/package.json
+++ b/backend/package.json
@@ -11,15 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.74.0",
     "bcryptjs": "^3.0.3",
     "body-parser": "^1.18.3",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "form-data": "^4.0.5",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "node-fetch": "^2.7.0",
     "pg": "^8.5.0",
     "socket.io": "^4.8.1",
     "ws": "^7.0.0"
